# auto_ria_downloader

./: .gitignore  README.md  config.json  input.txt  output.csv  output_20251113-12.csv  pyproject.toml  run.bat  run.sh  spec.txt
src/autoria_parser/: __init__.py  __main__.py  app.py  catalog.py  cli.py  config.py  detail.py  exceptions.py  logging.py  output.py  playwright_client.py
tests/unit/: test_config.py
